--- a/LicenceTrackerExampleApp/App.config
+++ b/LicenceTrackerExampleApp/App.config
@@ -2,8 +2,6 @@
 <configuration>
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
     <add name="LicenceTrackerContext" connectionString="Data Source=|DataDirectory|LicenceTracker.sdf" providerName="System.Data.SqlServerCe.4.0" />
@@ -44,4 +42,17 @@
       <add name="Microsoft SQL Server Compact Data Provider 4.0" invariant="System.Data.SqlServerCe.4.0" description=".NET Framework Data Provider for Microsoft SQL Server Compact" type="System.Data.SqlServerCe.SqlCeProviderFactory, System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
     </DbProviderFactories>
   </system.data>
+  <system.diagnostics>
+    <trace autoflush="true" />
+    <sources>
+      <source name="WinFormsMvp" switchValue="Verbose,Warning">
+        <listeners>
+          <add name="WinFormsMvpListener" />
+        </listeners>
+      </source>
+    </sources>
+    <sharedListeners>
+      <add name="WinFormsMvpListener" type="System.Diagnostics.XmlWriterTraceListener, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" initializeData="E:\WinFormsMvp.svclog" traceOutputOptions="Timestamp"></add>
+    </sharedListeners>
+  </system.diagnostics>
 </configuration>
