--- a/WinFormsMvp/WinFormsMvp.csproj
+++ b/WinFormsMvp/WinFormsMvp.csproj
@@ -103,6 +103,7 @@
     <Compile Include="PresenterBindingAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringExtensions.cs" />
+    <Compile Include="Tracing.cs" />
     <Compile Include="TypeExtensions.cs" />
     <Compile Include="TypeListComparer.cs" />
   </ItemGroup>
