--- a/Src/WinFormsMvp.Unity/packages.config
+++ b/Src/WinFormsMvp.Unity/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Unity" version="3.5.1404.0" targetFramework="net451" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
+  <package id="Unity" version="4.0.1" targetFramework="net46" />
 </packages>
